# CrossPL

android/: .gitignore  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
android/anno/: build.gradle  build.gradle.kts
android/buildSrc/: build.gradle.kts
android/buildSrc.bak/: build.gradle.kts
android/buildsrc/: build.gradle
android/gradle/: android.gradle  android.gradle.kts  config.gradle  config.gradle.kts  native.gradle  native.gradle.kts  publish.gradle  publish.gradle.kts
android/gradle/wrapper/: gradle-wrapper.properties
android/lib/: CMakeLists.txt  build.gradle  build.gradle.kts
android/lib/src/main/: AndroidManifest.xml
android/lib/src/main/cpp/: CMakeLists.txt  CrossBase.cpp  CrossBase.hpp  NativeBase.cpp  NativeBase.hpp
android/test/: build.gradle  build.gradle.kts
android/test/src/main/: AndroidManifest.xml
android/test/src/main/cpp/: CMakeLists.txt  JavaTestInnerClass_TestInnerClass.hpp  JavaTestMethods.hpp  JavaTestParams.cpp  JavaTestParams.hpp  KotlinTestInnerClass_TestInnerClass.hpp  KotlinTestMethods.cpp  KotlinTestMethods.hpp
ios/CrossPL.xcodeproj/: project.pbxproj
ios/anno/resources/: CrossPLClass.proxy.h.tmpl  CrossPLClass.proxy.mm.tmpl  CrossPLFactory.h.tmpl  CrossPLFactory.mm.tmpl  CrossPLUtils.cpp  CrossPLUtils.h  CrossPLUtils.hpp  CrossPLUtils.mm
ios/anno/swift/: CrossClassAnnoProcessor.swift  CrossClassInfo.swift  CrossMethodInfo.swift  CrossTmplUtils.swift  CrossVariableType.swift  StringExtension.swift  crosspl-anno  main.swift
ios/anno/swift/generator/: CrossPLFactoryGenerator.swift  CrossPLUtilsGenerator.swift  CrossProxyGenerator.swift
ios/lib/: CrossPL-Bridging-Header.h
ios/lib/CrossPL/: CrossPLFactory.h  CrossPLFactory.mm
ios/lib/cpp/: CrossBase.cpp  CrossBase.hpp
ios/lib/swift/: CrossBase.swift
ios/test/: SwiftTestParams.swift  ViewController.swift
ios/test/test/: InternalTest.hpp
ios/testlib/test/: ExternalTest.cpp  ExternalTest.hpp  test.swift
(+65 files in other folders)
